[Version 2.2 - May 2011]
- Added more compatibility for older FTP clients
- Rewrote code for PSL1GHT v2
- Changed UI to a simple message box (was lazy)
- More RFC compliance
- Improved overall connection handling

[Version 2.1.1 - April 3, 2011]
- More optimizations (improved response times)
- Reverted LIST format to support old clients
- Squished some bugs

[Version 2.1 - April 2, 2011]
- Code optimizations
- Some caching improvements (better response time)
- File transfer code rewritten
- More RFC compliance
- Added more FTP commands
- Changed LIST output format to EPLF

[Version 2.0 - March 23, 2011]
- Changed ICON0.PNG
- Moved to a different XMB category (now under Network)
- Fixed another possible memory leak
- Added "dev_dragon" to mount detection and warning list
- Changed LIST command output format (again)
- Added new algorithms and methods
- Should support Remote Play (untested)
- Added a better way to get the IP (no internet required anymore - thanks andoma)
- Added /app_home and /host_root to listing exceptions as they cause problems
- Now uses Hermes' sysfs sprx link instead of lv2 syscalls
- Tweaks made to improve internal performance, stability, and reliability
- Added a "screen saver" (simply blanks screen after 60 sec of no controller input)
- Added an exit application button combination shortcut (SELECT + START)
- Added an internal "retry system" designed to reduce failed transfers for small files
- New git for v2.0 and later: http://git-hacks.com/openps3ftp

[Version 1.5 - March 4, 2011]
- Improved performance and stability
- In-game XMB performance increased
- Better syscall usage
- Fixed a possible memory leak
- Fixed a couple of bugs
- Added support for commands: MDTM, ABOR
- nopass: now does normal login procedure (to ensure compatibility) but ignores password value
- Added new build.sh file for developers (creates nopass and normal versions)

[Version 1.4 - February 26, 2011]
- Added more return codes